# calhacks24

./: .gitignore
backend/: gemini.ipynb  pyproject.toml  requirements.txt
backend/src/backend/: __init__.py  clean_ply.py  drone.py  drone_agent.py  load.ipynb  main.py  search.py  yolo.py
client/: bun.lockb  package-lock.json  package.json  tailwind.config.ts
client/public/: test.ply
client/src/app/: globals.css  layout.tsx
client/src/app/(layout)/: layout.tsx
client/src/app/dashboard/: page.tsx
client/src/app/playground/: page.tsx
client/src/components/dashboard/: ActiveDrones.tsx  DetectedPersons.tsx  drone-assets.tsx  header.tsx  nav.tsx
client/src/components/sidebar/: sidebar-accordion-radix.tsx  sidebar-accordion.tsx  sidebar-constants.ts  sidebar-link.tsx  sidebar-nav.tsx  sidebar-toggle.tsx  sidebar.tsx  useOpenItem.ts  useSidebar.ts
client/src/components/splat/: plz.tsx  splat-viewer.tsx  splat.tsx  styles.css  viewer.tsx
client/src/components/ui/: badge.tsx  checkbox.tsx  progress.tsx  switch.tsx
client/src/lib/: utils.ts
experiments/: config.toml  depth-anything.ipynb  gaussian_splat.sh  image_test.ipynb  logger.py  models.py  myconfig.py  requirements.txt  yolo-data.ipynb  yolo-finetune.ipynb  yolo-inference-video.ipynb  yolo-inference.ipynb
experiments/datasets/broken-pole/: README.dataset.txt  README.roboflow.txt  data.yaml
experiments/runs/detect/train/: args.yaml  results.csv
frontend/: .env  bun.lockb  eslint.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
(+16 files in other folders)
