[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Spike O'Carroll", email = "19519553+spikecodes@users.noreply.github.com" }
]
dependencies = [
    "ultralytics>=8.3.17",
    "singlestoredb>=1.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
